--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8081
 spring.datasource.url=jdbc:h2:mem:stock-db
 spring.cloud.config.enabled=false
 spring.h2.console.enabled=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
